docs: update examples shop README